--- a/clase20/package.json
+++ b/clase20/package.json
@@ -15,6 +15,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
